<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bv.simpledictionary.Activities.Chart">

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:textSize="26sp"
        android:text="@string/ok"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:bottomRightRadius="8dp"
        android:bottomLeftRadius="8dp"
        android:topLeftRadius="8dp"
        android:topRightRadius="8dp"
        />

    <TextView
        android:id="@+id/allword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/correctword"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="56dp" />

    <TextView
        android:id="@+id/allword_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/allword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/allword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/allword"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ovalshape"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/cardview_light_background"
        />

    <TextView
        android:id="@+id/correct_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/correctword"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/correctword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/correctword"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ovalshape"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/cardview_light_background"
        />

    <TextView
        android:id="@+id/wrong_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/wrongword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/wrongword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/wrongword"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ovalshape"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:id="@+id/escpected_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/espectedword"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/espectedword"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/espectedword"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ovalshape"
        android:textColor="@color/cardview_light_background"
        android:textAlignment="center"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/correctword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct"
        app:layout_constraintTop_toTopOf="@+id/allword"
        app:layout_constraintRight_toLeftOf="@+id/wrongword"
        app:layout_constraintLeft_toRightOf="@+id/allword" />

    <TextView
        android:id="@+id/wrongword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong"
        app:layout_constraintLeft_toRightOf="@+id/correctword"
        app:layout_constraintRight_toLeftOf="@+id/espectedword"
        app:layout_constraintTop_toTopOf="@+id/correctword" />

    <TextView
        android:id="@+id/espectedword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ecspected"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/wrongword"
        app:layout_constraintTop_toTopOf="@+id/wrongword"
        />


</android.support.constraint.ConstraintLayout>
